--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NiKiTa(❁´◡`❁)</title>
+</head>
+<body>
+    <h1>Новини Спорту</h1>
+    <ul>
+
+        <li>ОФІЦІЙНО!!! ЯРМОЛЕНКО ПОВЕРТААЄТЬСЯ ДО ДИНАМО!</li>
+        <li>Останні новини футболу України та світу
+        </li>
+        <li>Чемпіонат Європи з футболу 2024
+            пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.</li>
+        <li>Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</li>
+
+    </ul>
+
+<div class="new"></div>
+<h2>ОФІЦІЙНО!!! ЯРМОЛЕНКО ПОВЕРТААЄТЬСЯ ДО ДИНАМО!</h2>
+<img src="https://s.ill.in.ua/i/news/350x252/508/508302.jpg" alt="">
+
+<p>«Динамо» Київ офіційно повідомило про повернення в клуб вінгера збірної України Андрія Ярмоленка. Контракт із 33-річним футболістом розрахований на два роки.
+
+    Раніше Ярмоленко виступав за «Динамо» з 2006 по 2017 роки, дебютувавши за першу команду 11 травня 2008 року. Сумарно Ярмоленко провів за «Динамо» 341 матч у всіх турнірах, і відзначився в них 137 голами.
+    
+    Попереднім клубом Ярмоленка був «Аль-Айн». Після відходу з «Динамо» Київ влітку 2017 року Ярмоленко також захищав кольори «Боруссії» Дортмунд і лондонського «Вест Хема». Раніше ЗМІ повідомляли про те, що Ярмоленко стане найбільш високооплачуваним гравцем «Динамо» із зарплатою в 1 мільйон доларів на рік. Після завершення кар'єри Ярмоленко займе крісло спортивного директора «Динамо».
+  </p>
+
+
+<div class="new"></div>
+<h2>Останні новини футболу України та світу
+</h2>
+<img src="https://faktypro.com.ua/uploads/img/14-interesnih-faktov-o-futbole-e1515499311152.jpg" alt="">
+
+<p>Футбол – найбільш обговорюваний вид спорту. Не дивно, що мільйони людей по всьому світу постійно стежать за новинами футболу, вболівають за улюблені команди, збираються на галасливих стадіонах або тихими вечорами в своєму будинку за кухлем пива. Футбол об’єднує мільйони чоловіків, надає їх життю новий яскравий сенс.
+
+    Новини футболу  – це цікаві інтерв’ю з життя зірок цього виду спорту. Ви знайдете  найбільш докладні аналітичні огляди матчів і найактуальніші новини футболу. Наші журналісти публікують новини без вихідних і свят, адже наша місія – надати Вам найсвіжіші новини якомога швидше.</p>
+
+<div class="new"></div>
+<h2>Чемпіонат Європи з футболу 2024
+    пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.
+    </h2>
+<img src="https://upload.wikimedia.org/wikipedia/uk/thumb/0/0a/UEFA_Euro_2024_official_logo.png/640px-UEFA_Euro_2024_official_logo.png" alt="">
+
+<p>Чемпіонат Європи з футболу 2024 року або Євро-2024 — 17-й чемпіонат Європи з футболу, який пройде у червні-липні 2024 року в Німеччині.
+
+    Німеччину, як країну, що буде приймати турнір, виконком УЄФА обрав у вересні 2018 року на своєму засіданні[1]. Для Німеччини це буде друге проведення змагань, перше — у Західній Німеччині 1988 року, а другий — 2020 року, де відбулись чотири матчі в мюнхенській Альянц-Арені. Однак це буде вперше, коли змагання проводяться в колишній Східній Німеччині[2].
+    
+    Італія захищатиме свій титул чемпіонів Європи.
+    </p>
+
+<div class="new"></div>
+<h2>Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</h2>
+<img src="https://s.ill.in.ua/i/news/630x373/504/504555.jpg" alt="">
+
+<p>Зінченко вперше став капітаном  Зінченко дебютував у статусі капітана: відеоогляд матчу Лестер – Арсенал – 0:1 Арсенала і привів "канонірів" до перемоги над Лестером  АПЛ: Арсенал здолав Лестер – Зінченко у новій статусній ролі був одним з найкращих, заміна Мудрику крута і вирішальна . Артета присвятив цю звитягу  Артета присвятив перемогу Арсенала Зінченку та українцям: “Надихають світ своїм бойовим духом” усім українцям.</p>
+
+<div>
+
+
+</body>
+</html>
 
