--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <h1>Новини Спорту</h1>
     <ul>
 
-        <li>ОФІЦІЙНО!!! ЯРМОЛЕНКО ПОВЕРТААЄТЬСЯ ДО ДИНАМО!</li>
-        <li>Останні новини футболу України та світу
+        <li><a href="https://fcdynamo.com/news/andrij-yarmolenko-povernuvsya-v-dinamo">ОФІЦІЙНО!!! ЯРМОЛЕНКО ПОВЕРТААЄТЬСЯ ДО ДИНАМО!</a></li>
+        <li><a href="https://sts.sumy.ua/sport-2/ostanni-novyny-futbolu-ukrayiny-ta-svitu.html">Останні новини футболу України та світу</a>
         </li>
-        <li>Чемпіонат Європи з футболу 2024
-            пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.</li>
-        <li>Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</li>
+        <li><a href="https://www.google.com/search?q=%D0%A7%D0%B5%D0%BC%D0%BF%D1%96%D0%BE%D0%BD%D0%B0%D1%82+%D0%84%D0%B2%D1%80%D0%BE%D0%BF%D0%B8+%D0%B7+%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%83+2024&source=lmns&bih=596&biw=1229&hl=uk&sa=X&ved=2ahUKEwjD-Jfy8v__AhWeJRAIHQMcCRUQ_AUoAHoECAEQAA">Чемпіонат Європи з футболу 2024
+            пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.</a></li>
+        <li><a href="https://football24.ua/golovni_novini_25_lyutogo_zinchenko_stav_kapitanom_arsenala_i_peremig_yarmolenko_travmuvavsya_pered_angliyeyu_n761455/">Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</a></li>
 
     </ul>
 
-<div class="new"></div>
+<div id="https://fcdynamo.com/news/andrij-yarmolenko-povernuvsya-v-dinamo" class="new"></div>
 <h2>ОФІЦІЙНО!!! ЯРМОЛЕНКО ПОВЕРТААЄТЬСЯ ДО ДИНАМО!</h2>
 <img src="https://s.ill.in.ua/i/news/350x252/508/508302.jpg" alt="">
 
@@ -30,7 +30,7 @@
   </p>
 
 
-<div class="new"></div>
+<div id="https://sts.sumy.ua/sport-2/ostanni-novyny-futbolu-ukrayiny-ta-svitu.html" class="new"></div>
 <h2>Останні новини футболу України та світу
 </h2>
 <img src="https://faktypro.com.ua/uploads/img/14-interesnih-faktov-o-futbole-e1515499311152.jpg" alt="">
@@ -39,7 +39,7 @@
 
     Новини футболу  – це цікаві інтерв’ю з життя зірок цього виду спорту. Ви знайдете  найбільш докладні аналітичні огляди матчів і найактуальніші новини футболу. Наші журналісти публікують новини без вихідних і свят, адже наша місія – надати Вам найсвіжіші новини якомога швидше.</p>
 
-<div class="new"></div>
+<div id="https://www.google.com/search?q=%D0%A7%D0%B5%D0%BC%D0%BF%D1%96%D0%BE%D0%BD%D0%B0%D1%82+%D0%84%D0%B2%D1%80%D0%BE%D0%BF%D0%B8+%D0%B7+%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%83+2024&source=lmns&bih=596&biw=1229&hl=uk&sa=X&ved=2ahUKEwjD-Jfy8v__AhWeJRAIHQMcCRUQ_AUoAHoECAEQAA" class="new"></div>
 <h2>Чемпіонат Європи з футболу 2024
     пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.
     </h2>
@@ -52,10 +52,9 @@
     Італія захищатиме свій титул чемпіонів Європи.
     </p>
 
-<div class="new"></div>
+<div id="https://football24.ua/golovni_novini_25_lyutogo_zinchenko_stav_kapitanom_arsenala_i_peremig_yarmolenko_travmuvavsya_pered_angliyeyu_n761455/" class="new"></div>
 <h2>Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</h2>
 <img src="https://s.ill.in.ua/i/news/630x373/504/504555.jpg" alt="">
-
 <p>Зінченко вперше став капітаном  Зінченко дебютував у статусі капітана: відеоогляд матчу Лестер – Арсенал – 0:1 Арсенала і привів "канонірів" до перемоги над Лестером  АПЛ: Арсенал здолав Лестер – Зінченко у новій статусній ролі був одним з найкращих, заміна Мудрику крута і вирішальна . Артета присвятив цю звитягу  Артета присвятив перемогу Арсенала Зінченку та українцям: “Надихають світ своїм бойовим духом” усім українцям.</p>
 
 <div>
