--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <div id="https://sts.sumy.ua/sport-2/ostanni-novyny-futbolu-ukrayiny-ta-svitu.html" class="new"></div>
 <h2>Останні новини футболу України та світу
 </h2>
-<img src="https://faktypro.com.ua/uploads/img/14-interesnih-faktov-o-futbole-e1515499311152.jpg" alt="">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-6qA5QNxQdSmJQxX_0EuFKapgpFvVXuNEhw&usqp=CAU" alt="">
 
 <p>Футбол – найбільш обговорюваний вид спорту. Не дивно, що мільйони людей по всьому світу постійно стежать за новинами футболу, вболівають за улюблені команди, збираються на галасливих стадіонах або тихими вечорами в своєму будинку за кухлем пива. Футбол об’єднує мільйони чоловіків, надає їх життю новий яскравий сенс.
 
@@ -62,4 +62,3 @@
 
 </body>
 </html>
-
