--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ width: 500px;
         <li><a href="#three">Чемпіонат Європи з футболу 2024
             пт, 14 черв. 2024 р. – нд, 14 лип. 2024 р.</a></li>
         <li><a href="#four">Головні новини 25 лютого: Зінченко став капітаном Арсенала і переміг</a></li>
-        <li><a href="#five"></a></li>
-        <li><a href="#six"></a></li>
+        <li><a href="#five">Англія - чемпіон Європи серед молоді, Динамо присоромило турків. Головні новини за 8 липня</a></li>
+        <li><a href="#six">Англія в драматичному фіналі обіграла Іспанію та вперше за 39 років виграла молодіжне Євро</a></li>
 
 
 
@@ -130,3 +130,4 @@ width: 500px;
 
 </body>
 </html>
+
